# dmail

./: funding.json
backend/: Cargo copy.toml  README.md  canister_ids.json  dfx.json
backend/cache/: Cargo.toml  cache.did
backend/cache/src/: main.rs
backend/cap/: canister_ids.json  dfx.json
backend/cap/candid/: cap-root.did  router.did
backend/cap/canisters/bucket/: readme.md
backend/cap/canisters/root/src/: lib.rs
backend/cap/canisters/router/src/: installer.rs  upgrade.rs
backend/cap/sdk/rust/src/: lib.rs
backend/cap/wasm/: cap_root.wasm
backend/ci/: env.sh  local.json  readme.md
backend/ci/amino_nft/: ic-deploy.sh  local-deploy.sh
backend/ci/dmail_nft/: ic-deploy.sh  local-deploy.sh
backend/did_cache/: Cargo.toml  did_cache.did
backend/did_cache/src/: main.rs
backend/dmail_nft/: Cargo.toml  dmail_nft.did
backend/dmail_nft/src/: dmail_service.rs  dmail_util.rs  foreign_call.rs  ledger.rs  lib.rs  service.rs  types.rs  utils.rs
backend/nft/: Cargo.toml  nft.did
backend/nft/src/: main.rs  main_old.rs
backend/profile/: Cargo.toml  profile.did
backend/profile/src/: main.rs
backend/router/: Cargo.toml  router.did
backend/router/src/: main.rs  manager.rs
src/pages/subscribe/: center.jsx  css.js  detail.jsx  index.jsx  search.jsx  subscribed.jsx  utils.js
src/router/: index.jsx
