[package]
name = "dmail_nft"
version = "0.1.0"
authors = ["Daniel Graczer <daniel@fleek.co>"]
edition = "2018"

[dependencies]
ic-kit = "0.4.2"
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"
common = {path = "../common"}
serde = { version="1.0.130", features = ["derive"] }
derive-new = "0.5"
serde_bytes = "0.11.5"
serde_cbor = "0.11.2"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version="1.10.0", features = ["attributes"] }

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"


